完成最后一个Phase的所有开发及测试
